--- a/src/main/res/menu/main.xml
+++ b/src/main/res/menu/main.xml
@@ -4,7 +4,13 @@
     tools:context=".MainActivity">
 
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:id="@+id/action_our_app"
+        android:orderInCategory="100"
+        android:title="@string/action_our_apps"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_about_us"
+        android:orderInCategory="100"
+        android:title="@string/action_about_us"
         app:showAsAction="never" />
 </menu>
